--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,9 +10,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: $font-size;
   font-family: $font;
-  font-weight: normal;
   line-height: 1.25;
   color: #fff;
+  font-weight: 300;
 }
 *, *::before, *::after { box-sizing: border-box; };
 .container {
@@ -34,5 +34,25 @@ body {
     background-color: $accent;
   }
 }
+section {
+  &:nth-child(odd) {
+    background-color: #252527;
+  }
+  &:nth-child(even) {
+    background-color: #1f1f20;
+  }
+}
+.section {
+  padding: rem(100px) 0;
+}
+.title {
+  text-transform: capitalize;
+  font-size: rem(36px);
+  font-weight: 300;
+}
+.overflow {
+  overflow: hidden;
+}
 
 @import './components/intro';
+@import './components/about';
