My skills section

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -3,3 +3,9 @@ $font-size: 14px;
 
 $accent: #ea548d;
 $dark: #252527;
+
+$gap: 24px;
+
+$small-font  : 16px;
+$medium-font : 36px;
+$large-font  : 50px;
