--- a/src/assets/scss/components/_intro.scss
+++ b/src/assets/scss/components/_intro.scss
@@ -14,15 +14,15 @@
     }
   }
   &__main {
-    font-size: rem(20px)
+    font-size: $small-font;
   }
   &__title {
-    font-size: rem(50px);
+    font-size: $large-font;
     font-weight: bold;
     margin: rem(10px) 0;
   }
   &__subtitle {
-    font-size: rem(30px);
+    font-size: $medium-font;
     margin: 0;
   }
   &__img {
