--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -55,7 +55,22 @@ section {
   font-weight: 300;
   text-align: center;
   margin-top: 0;
-  margin-bottom: rem($gap*3)
+  margin-bottom: rem($gap*3);
+  display: inline-block;
+  padding-bottom: $gap;
+  position: relative;
+  &__wrap {
+    text-align: center;
+  }
+  &:before {
+    content: '';
+    background-color: $accent;
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
 }
 .overflow {
   overflow: hidden;
