--- a/src/assets/scss/components/_intro.scss
+++ b/src/assets/scss/components/_intro.scss
@@ -1,12 +1,20 @@
 .intro {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  @include phone {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    max-height: 80%;
+    padding-top: 30%;
+  }
   position: relative;
   z-index: 1;
+  height: 100%;
   &__section {
     position: relative;
+    height: 100vh;
     canvas {
       position: absolute;
       top: 0;
@@ -18,18 +26,51 @@
   }
   &__title {
     font-size: $large-font;
+    @include phone {
+      font-size: $medium-font;
+    }
     font-weight: bold;
     margin: rem(10px) 0;
   }
   &__subtitle {
     font-size: $medium-font;
+    @include phone {
+      font-size: $small-font;
+    }
     margin: 0;
   }
   &__img {
+    height: 70%;
+    @include phone {
+      margin-top: rem($gap*2);
+    }
+    @include tablet-desktop {
+      flex-basis: 40%;
+      height: 50%;
+    }
+    @include desktop {
+      height: 70%;
+    }
+    &-holder {
+      position: relative;
+      height: 100%;
+      &:after {
+        content: '';
+        position: absolute;
+        bottom: rem(-15px);
+        right: rem(-15px);
+        border: 7px solid $accent;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+    }
     &-item {
-      width: 300px;
-      height: 500px;
-      background-color: tomato;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      position: relative;
+      background-color: $dark;
     }
   }
 }
