--- a/src/assets/scss/components/_skills.scss
+++ b/src/assets/scss/components/_skills.scss
@@ -1,12 +1,18 @@
 .skill {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
+  @include phone {
+    grid-template-columns: repeat(2, 1fr)
+  }
   grid-gap: $gap;
   perspective: 1000px;
   perspective-origin: 50% 50%;
   &__item {
     margin: 0;
     padding: rem($gap*2) 0;
+    @include phone {
+      padding: rem($gap) 0;
+    }
     background-color: $dark;
     transition: transform .3s ease;
     cursor: pointer;
@@ -15,22 +21,21 @@
     justify-content: center;
     align-items: center;
     fill: #fff;
-    transform: rotateX(20deg);
     svg {
       max-width: 70%;
     }
-    &:nth-child(-n+6) {
-      transform: rotateX(-20deg);
-      &:hover {
-        transform: rotateX(-20deg) scale(1.1);
-      }
-    }
-    &:nth-child(n+7) {
-      transform: rotateX(20deg);
-      &:hover {
-        transform: rotateX(20deg) scale(1.1);
-      }
-    }
+    // &:nth-child(-n+6) {
+    //   transform: rotateX(-20deg);
+    //   &:hover {
+    //     transform: rotateX(-20deg) scale(1.1);
+    //   }
+    // }
+    // &:nth-child(n+7) {
+    //   transform: rotateX(20deg);
+    //   &:hover {
+    //     transform: rotateX(20deg) scale(1.1);
+    //   }
+    // }
     &-title {
       text-align: center;
       margin-bottom: $gap;
