--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,9 +1,10 @@
+@import './libs';
 @import './vars';
 @import './mixins';
-@import './libs';
 
 html {
   height: 100%;
+  overflow-x:hidden;
 }
 body {
   -webkit-font-smoothing: antialiased;
@@ -13,12 +14,14 @@ body {
   line-height: 1.25;
   color: #fff;
   font-weight: 300;
+  overflow-x: hidden;
 }
 *, *::before, *::after { box-sizing: border-box; };
 .container {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 $gap;
+  height: 100%;
 }
 .accent {
   position: relative;
@@ -31,6 +34,9 @@ body {
     left: 0;
     width: 100%;
     height: rem(15px);
+    @include phone {
+      height: 7px;
+    }
     z-index: -1;
     background-color: $accent;
   }
