--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -93,3 +93,4 @@ body {
 @import './components/intro';
 @import './components/about';
 @import './components/skills';
+@import './components/portfolio';
