Page animated, animate css now fetches from npm

--- a/src/assets/scss/_libs.scss
+++ b/src/assets/scss/_libs.scss
@@ -1,2 +1,3 @@
-@import '../../../node_modules/normalize.scss';
-@import "sass-rem/_rem"
+@import 'normalize.scss';
+@import "sass-rem/_rem";
+@import '~animate.css/animate.css'
