Particles loads without external json file

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -83,7 +83,7 @@ section {
   overflow: hidden;
 }
 body {
-  transition: filter .3s ease;
+  // transition: filter .3s ease;
   background-color: $dark;
   &.load {
     filter: blur(20px);
