--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -94,3 +94,4 @@ body {
 @import './components/about';
 @import './components/skills';
 @import './components/portfolio';
+@import './components/contact'
