--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -94,4 +94,5 @@ body {
 @import './components/about';
 @import './components/skills';
 @import './components/portfolio';
-@import './components/contact'
+@import './components/contact';
+@import './components/social';
